<resources>
    <string name="app_name">MemoryImprovement</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string-array name="gender">

        <item>Male</item>
        <item>Female</item>
        <item>Choose not to disclose</item>
    </string-array>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sigInButton">Sign In</string>
    <string name="linkToRegister">Don\'t Have An Account ?</string>
    <string name="phone">Phone Number</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome !</string>
    <string name="submit">Submit</string>
    <string name="Personal_Information">Personal Information</string>
    <string name="Quizes">Quizes</string>
    <string name="Calendar">Calendar</string>
    <string name="Gallery">Gallery</string>
    <string name="title_activity_signin">Sign in</string>
    <string name="Enter_Question">Enter Your Question</string>
    <string name="Answer_Question">Answer Your Question</string>
</resources>
