<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeScreen">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
    <Button
        android:layout_width="match_parent"
        android:layout_weight="1.0"
        android:gravity="fill_horizontal"
        android:layout_marginTop="2dp"
        android:layout_height="wrap_content"
        android:text="@string/Personal_Information"
        android:textAlignment="center"
        android:id="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_weight="1.0"
        android:gravity="fill_horizontal"
        android:layout_marginTop="2dp"
        android:layout_height="wrap_content"
        android:text="@string/Quizes"
        android:textAlignment="center"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_weight="1.0"
        android:gravity="fill_horizontal"
        android:layout_marginTop="2dp"
        android:layout_height="wrap_content"
        android:text="@string/Calendar"
        android:textAlignment="center"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_weight="1.0"
        android:gravity="fill_horizontal"
        android:layout_marginTop="2dp"
        android:layout_height="wrap_content"
        android:text="@string/Gallery"
        android:textAlignment="center"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    </LinearLayout>
</RelativeLayout>
